--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,22 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Sign Up</h1>
+
+<%= form_for @user do |f| %>
+  <p>
+    <%= f.label :username %><br>
+    <%= f.text_field :username %><br>
+  </p>
+
+  <p>
+    <%= f.label :password %><br>
+    <%= f.text_field :password %><br>
+  </p>
+
+  <p>
+    <%= f.label :password_confirmation %><br>
+    <%= f.text_field :password_confirmation %><br>
+  </p>
+
+  <p>
+    <%= f.submit %><br>    
+  </p>
+<% end %>
