--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,15 +8,15 @@
 
   <p>
     <%= f.label :password %><br>
-    <%= f.text_field :password %><br>
+    <%= f.password_field :password %><br>
   </p>
 
   <p>
     <%= f.label :password_confirmation %><br>
-    <%= f.text_field :password_confirmation %><br>
+    <%= f.password_field :password_confirmation %><br>
   </p>
 
   <p>
-    <%= f.submit %><br>    
+    <%= f.submit %><br>
   </p>
 <% end %>
